# name: test_command_delete[False-False-False-False]
  '''
  This action will delete following hikes:
  
                                Hikes                               
                                                                    
    ID   Date         Name       ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  Aborting
  
  '''
# ---
# name: test_command_delete[False-False-False-True]
  '''
  This action will delete following hikes:
  
                                Hikes                               
                                                                    
    ID   Date         Name       ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  Aborting
  
  '''
# ---
# name: test_command_delete[False-False-True-False]
  '''
  This action will delete following hikes:
  
                                Hikes                               
                                                                    
    ID   Date         Name       ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  
  '''
# ---
# name: test_command_delete[False-False-True-True]
  '''
  This action will delete following hikes:
  
                                Hikes                               
                                                                    
    ID   Date         Name       ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-False-False]
  '''
  This action will delete following hikes:
  
                                Hikes                               
                                                                    
    ID   Date         Name       ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-False-True]
  '''
  This action will delete following hikes:
  
                                Hikes                               
                                                                    
    ID   Date         Name       ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-True-False]
  '''
  This action will delete following hikes:
  
                                Hikes                               
                                                                    
    ID   Date         Name       ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-True-True]
  '''
  This action will delete following hikes:
  
                                Hikes                               
                                                                    
    ID   Date         Name       ➡ km    ⬈ m    ⬊ m       ⏱   km/h  
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  
  '''
# ---
# name: test_command_export_with_ids
  list([
    dict({
      'body': '# Foo Hike',
      'date': '1984-09-22',
      'distance': 10.5,
      'duration': 134,
      'elevation_gain': 2040,
      'elevation_loss': 2028,
      'gpx_file': None,
      'id': 1,
      'name': 'Foo Hike',
    }),
    dict({
      'body': '# Bar Hike',
      'date': '1984-09-23',
      'distance': 15.4,
      'duration': 228,
      'elevation_gain': 240,
      'elevation_loss': 228,
      'gpx_file': None,
      'id': 2,
      'name': 'Bar Hike',
    }),
    dict({
      'body': '# Baz Hike',
      'date': '1984-09-24',
      'distance': 34.0,
      'duration': 497,
      'elevation_gain': 867,
      'elevation_loss': 947,
      'gpx_file': None,
      'id': 3,
      'name': 'Baz Hike',
    }),
  ])
# ---
# name: test_command_import
  list([
    '1',
    '1970-01-01',
    'endorsement hike',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import.1
  list([
    '2',
    '1970-01-02',
    'abnegation hike',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import.2
  list([
    '3',
    '1970-01-03',
    'depositor hike',
    '7.4',
    '1029',
    '54',
    '02:45',
    '2.69',
  ])
# ---
# name: test_command_import.3
  list([
    '4',
    '1970-01-04',
    "adrenaline's hike",
    '6.6',
    '420',
    '420',
    '02:00',
    '3.30',
  ])
# ---
# name: test_command_import.4
  list([
    '5',
    '1970-01-05',
    "shooter's hike",
    '5.0',
    '288',
    '288',
    '01:50',
    '2.73',
  ])
# ---
# name: test_command_import_update[False]
  list([
    '1',
    '2022-02-26',
    'abnegation hike',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import_update[False].1
  None
# ---
# name: test_command_import_update[True]
  list([
    '1',
    '2022-02-26',
    'abnegation hike',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import_update[True].1
  GPX(waypoints=[GPXWaypoint(45.772163216, 14.357652292, name='Name 1', description='Desc 1', symbol='Flag, Blue', comment='Comment 1'), GPXWaypoint(45.757933259, 14.294899916, elevation=-0.11438, name='Name 2', description='Desc 2', symbol='Flag, Blue', comment='Comment 2'), GPXWaypoint(45.735199945, 14.377516648, elevation=-0.11438, name='Name 3', description='Desc 3', symbol='Flag, Blue', comment='Comment 3')], tracks=[GPXTrack(name='Track 1', segments=[GPXTrackSegment(points=[...])]), GPXTrack(name='Track 2', segments=[GPXTrackSegment(points=[...])])])
# ---
# name: test_command_show_detail[False-False-False]
  '''
                Foo Bar Hike              
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 Foo Bar Hike                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  No *.gpx-file available
  
  
  '''
# ---
# name: test_command_show_detail[True-False-False]
  '''
                Foo Bar Hike              
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 Foo Bar Hike                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⠀⡤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡸⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢠⠃⠀⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠀⢇⠀⡜⢆⡸⠉⠉⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠘⠚⠀⠈⠃⠀⠀⠀⠓⠢⡀⠀⠀⡰⠲⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠒⠚⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠦⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠀⢣⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  GPXSee not found. Install it to view your gpx
  
  '''
# ---
# name: test_command_show_detail[True-False-True]
  '''
                Foo Bar Hike              
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 Foo Bar Hike                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⠀⡤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡸⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢠⠃⠀⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠀⢇⠀⡜⢆⡸⠉⠉⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠘⠚⠀⠈⠃⠀⠀⠀⠓⠢⡀⠀⠀⡰⠲⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠒⠚⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠦⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠀⢣⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  Aborting
  
  '''
# ---
# name: test_command_show_detail[True-True-False]
  '''
                Foo Bar Hike              
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 Foo Bar Hike                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⠀⡤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡸⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢠⠃⠀⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠀⢇⠀⡜⢆⡸⠉⠉⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠘⠚⠀⠈⠃⠀⠀⠀⠓⠢⡀⠀⠀⡰⠲⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠒⠚⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠦⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠀⢣⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  GPXSee not found. Install it to view your gpx
  
  '''
# ---
# name: test_command_show_detail[True-True-True]
  '''
                Foo Bar Hike              
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 Foo Bar Hike                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⠀⡤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡸⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢠⠃⠀⠀⠈⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠀⢇⠀⡜⢆⡸⠉⠉⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠘⠚⠀⠈⠃⠀⠀⠀⠓⠢⡀⠀⠀⡰⠲⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠒⠚⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠦⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠀⢣⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠀⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  
  '''
# ---
# name: test_command_show_list[date-False-daterange0-table_style0-plot_params0]
  '''
                                     Hikes                                    
   ────────────────────────────────────────────────────────────────────────── 
    ID   Date         Name         ➡ km      ⬈ m      ⬊ m         ⏱     km/h  
   ────────────────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike     10.5     2040     2028     02:14     4.70  
     2   1984-09-23   Bar Hike     15.4      240      228     03:48     4.05  
     3   1984-09-24   Baz Hike     34.0      867      947     08:17     4.10  
   ────────────────────────────────────────────────────────────────────────── 
         STATS        3          Σ 59.9   Σ 3147   Σ 3203   Σ 14:19   Σ    -  
                                 ⌀ 20.0   ⌀ 1049   ⌀ 1068   ⌀ 04:46   ⌀ 4.29  
                                 ↑ 34.0   ↑ 2040   ↑ 2028   ↑ 08:17   ↑ 4.70  
                                 ↓ 10.5   ↓  240   ↓  228   ↓ 02:14   ↓ 4.05  
   ────────────────────────────────────────────────────────────────────────── 
  
  '''
# ---
# name: test_command_show_list[date-True-daterange1-table_style1-plot_params1]
  '''
                                     Hikes                                    
   ────────────────────────────────────────────────────────────────────────── 
    ID   Date         Name         ➡ km      ⬈ m      ⬊ m         ⏱     km/h  
   ────────────────────────────────────────────────────────────────────────── 
     2   1984-09-23   Bar Hike     15.4      240      228     03:48     4.05  
     1   1984-09-22   Foo Hike     10.5     2040     2028     02:14     4.70  
   ────────────────────────────────────────────────────────────────────────── 
         STATS        2          Σ 25.9   Σ 2280   Σ 2256   Σ 06:02   Σ    -  
                                 ⌀ 12.9   ⌀ 1140   ⌀ 1128   ⌀ 03:01   ⌀ 4.38  
                                 ↑ 15.4   ↑ 2040   ↑ 2028   ↑ 03:48   ↑ 4.70  
                                 ↓ 10.5   ↓  240   ↓  228   ↓ 02:14   ↓ 4.05  
   ────────────────────────────────────────────────────────────────────────── 
  
  '''
# ---
# name: test_command_show_list[distance-True-daterange2-table_style2-plot_params2]
  '''
                                     Hikes                                    
  ╔════╦════════════╦══════════╦════════╦════════╦════════╦═════════╦════════╗
  ║ ID ║ Date       ║ Name     ║   ➡ km ║    ⬈ m ║    ⬊ m ║       ⏱ ║   km/h ║
  ╠════╬════════════╬══════════╬════════╬════════╬════════╬═════════╬════════╣
  ║  3 ║ 1984-09-24 ║ Baz Hike ║   34.0 ║    867 ║    947 ║   08:17 ║   4.10 ║
  ║  2 ║ 1984-09-23 ║ Bar Hike ║   15.4 ║    240 ║    228 ║   03:48 ║   4.05 ║
  ║  1 ║ 1984-09-22 ║ Foo Hike ║   10.5 ║   2040 ║   2028 ║   02:14 ║   4.70 ║
  ╠════╬════════════╬══════════╬════════╬════════╬════════╬═════════╬════════╣
  ║    ║ STATS      ║ 3        ║ Σ 59.9 ║ Σ 3147 ║ Σ 3203 ║ Σ 14:19 ║ Σ    - ║
  ║    ║            ║          ║ ⌀ 20.0 ║ ⌀ 1049 ║ ⌀ 1068 ║ ⌀ 04:46 ║ ⌀ 4.29 ║
  ║    ║            ║          ║ ↑ 34.0 ║ ↑ 2040 ║ ↑ 2028 ║ ↑ 08:17 ║ ↑ 4.70 ║
  ║    ║            ║          ║ ↓ 10.5 ║ ↓  240 ║ ↓  228 ║ ↓ 02:14 ║ ↓ 4.05 ║
  ╚════╩════════════╩══════════╩════════╩════════╩════════╩═════════╩════════╝
  
  '''
# ---
# name: test_command_show_list[elevation_gain-False-daterange3-table_style3-plot_params3]
  '''
                                     Hikes                                    
  ╔════╦════════════╦══════════╦════════╦════════╦════════╦═════════╦════════╗
  ║ ID ║ Date       ║ Name     ║   ➡ km ║    ⬈ m ║    ⬊ m ║       ⏱ ║   km/h ║
  ╠════╬════════════╬══════════╬════════╬════════╬════════╬═════════╬════════╣
  ║  2 ║ 1984-09-23 ║ Bar Hike ║   15.4 ║    240 ║    228 ║   03:48 ║   4.05 ║
  ║  3 ║ 1984-09-24 ║ Baz Hike ║   34.0 ║    867 ║    947 ║   08:17 ║   4.10 ║
  ║  1 ║ 1984-09-22 ║ Foo Hike ║   10.5 ║   2040 ║   2028 ║   02:14 ║   4.70 ║
  ╠════╬════════════╬══════════╬════════╬════════╬════════╬═════════╬════════╣
  ║    ║ STATS      ║ 3        ║ Σ 59.9 ║ Σ 3147 ║ Σ 3203 ║ Σ 14:19 ║ Σ    - ║
  ║    ║            ║          ║ ⌀ 20.0 ║ ⌀ 1049 ║ ⌀ 1068 ║ ⌀ 04:46 ║ ⌀ 4.29 ║
  ║    ║            ║          ║ ↑ 34.0 ║ ↑ 2040 ║ ↑ 2028 ║ ↑ 08:17 ║ ↑ 4.70 ║
  ║    ║            ║          ║ ↓ 10.5 ║ ↓  240 ║ ↓  228 ║ ↓ 02:14 ║ ↓ 4.05 ║
  ╚════╩════════════╩══════════╩════════╩════════╩════════╩═════════╩════════╝
    (➡ km)   ^
       36.35 |
       34.94 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       33.53 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠀⠀⠀⠀
       32.12 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⠊⠀⠀⠀⠀⠀
       30.71 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀
       29.30 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀
       27.89 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       26.48 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       25.07 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       23.66 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       22.25 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       20.84 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       19.43 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       18.02 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.61 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.20 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       13.79 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠤⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       12.38 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       10.97 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
        9.56 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
        8.15 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (⏱ )
             | 00:00     01:56     03:52     05:48     07:45    
  
  '''
# ---
# name: test_command_show_list[speed-True-daterange4-table_style4-plot_params4]
  '''
                                     Hikes                                    
   ────────────────────────────────────────────────────────────────────────── 
    ID   Date         Name         ➡ km      ⬈ m      ⬊ m         ⏱     km/h  
   ────────────────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike     10.5     2040     2028     02:14     4.70  
     3   1984-09-24   Baz Hike     34.0      867      947     08:17     4.10  
     2   1984-09-23   Bar Hike     15.4      240      228     03:48     4.05  
   ────────────────────────────────────────────────────────────────────────── 
         STATS        3          Σ 59.9   Σ 3147   Σ 3203   Σ 14:19   Σ    -  
                                 ⌀ 20.0   ⌀ 1049   ⌀ 1068   ⌀ 04:46   ⌀ 4.29  
                                 ↑ 34.0   ↑ 2040   ↑ 2028   ↑ 08:17   ↑ 4.70  
                                 ↓ 10.5   ↓  240   ↓  228   ↓ 02:14   ↓ 4.05  
   ────────────────────────────────────────────────────────────────────────── 
    (➡ km)   ^
       36.35 |
       34.94 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       33.53 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀
       32.12 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁
       30.71 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀
       29.30 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀
       27.89 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠎⠀⠀⠀⠀⠀⠀
       26.48 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀
       25.07 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
       23.66 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       22.25 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       20.84 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       19.43 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       18.02 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       16.61 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       15.20 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⠤⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       13.79 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣀⠤⠤⠒⠊⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       12.38 | ⠀⠀⠀⠀⠀⠀⠀⠀⣀⡠⠤⠒⠒⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       10.97 | ⠀⣀⣀⠤⠔⠒⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
        9.56 | ⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
        8.15 | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Date)
             | 09-22     09-22     09-22     09-23     09-23    
  
  '''
# ---
